# napcron

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
napcron/: __init__.py
tests/: test_main.py  test_requirements.py
